<resources>
    <string name="digits" translatable="false">0123456789.</string>

    <string name="app_name">Staking Planet</string>
    <string name="home">首页</string>
    <string name="quotation">行情</string>
    <string name="trade">交易</string>
    <string name="assets">资产</string>
    <string name="mine">我的</string>

    <string name="valuation_default_fiat">US Dollar</string>
    <string name="web_ua_language">en-GB</string>
    <string name="price1">价格(%1$s)</string>
    <string name="nubmer">数量</string>
    <string name="volume_number">24H量 %s</string>
    <string name="total_price">成交总额(%1$s)</string>
    <string name="available_title">可用：</string>
    <string name="dangqianwangluobujia">当前网络不佳</string>
    <string name="price_gang">--</string>
    <string name="trade_amount">交易额(%1$s)</string>
    <string name="shijia_trade_price">Amount(%1$s)</string>
    <string name="number1">数量(%1$s)</string>
    <string name="cyuerbuzu">余额不足</string>
    <string name="please_input_num">请输入一个有效数字</string>
    <string name="please_fill_price">请输入价格</string>
    <string name="trade_status_is_avaliable">交易当前不被支持</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="number">数量</string>
    <string name="transaction_amount_1">成交额</string>
    <string name="cur_best_price">市价</string>
    <string name="marketOrder">市价单</string>
    <string name="limit_price_order">限价单</string>
    <string name="limit_price">限价</string>
    <string name="cancel">取消</string>
    <string name="price2">价格(%1$s)</string>
    <string name="number2">数量(%1$s)</string>
    <string name="defult">默认</string>
    <string name="show_buy">展示买单</string>
    <string name="show_sell">展示卖单</string>
    <string name="jiweixiaoshu">位小数</string>
    <string name="place_holder">--</string>
    <string name="k_time">分时</string>
    <string name="k_1min">1分</string>
    <string name="k_5min">5分</string>
    <string name="k_15min">15分</string>
    <string name="k_30min">30分</string>
    <string name="k_6h">6小时</string>
    <string name="k_1h">1小时</string>
    <string name="k_2h">2小时</string>
    <string name="k_4h">4小时</string>
    <string name="k_12h">12小时</string>x
    <string name="k_1d">日线</string>
    <string name="k_1w">周线</string>
    <string name="change_account_name">修改账号名称</string>
    <string name="reset_password">重置密码</string>
    <string name="export_private_key">导出私钥</string>
    <string name="type">类型</string>
    <string name="volume_and_quantity">成交量/数量</string>
    <string name="average_price_and_price">均价/价格</string>
    <string name="fee">手续费</string>
    <string name="transaction_detail">成交详情</string>
    <string name="date">日期</string>
    <string name="transaction_price">成交价</string>
    <string name="transaction_volume">成交量</string>
    <string name="__">--</string>
    <string name="buy1">买</string>
    <string name="sell1">卖</string>
    <string name="price_high">H %s</string>
    <string name="price_open">O %s</string>
    <string name="price_low">L %s</string>
    <string name="price_closed">C %s</string>
    <string name="price_range">Change %s</string>
    <string name="price_txn">Q %s</string>
    <string name="album">相册</string>
    <string name="scan_failed">识别失败</string>
</resources>
