<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/MatchMatch.Horizontal.Center"
        android:id="@+id/ll">
    <LinearLayout
            style="@style/MainTabLayout"
            android:id="@+id/ll_home">
        <ImageView
                style="@style/WrapWrap"
                android:src="@drawable/main_tab_home"/>
        <TextView
                style="@style/MainTabText"
                android:text="@string/home"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_quotation"
            style="@style/MainTabLayout">
        <ImageView
                style="@style/WrapWrap"
                android:src="@drawable/main_tab_quotation"/>
        <TextView
                style="@style/MainTabText"
                android:text="@string/quotation"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_trade"
            style="@style/MainTabLayout">
        <ImageView
                style="@style/WrapWrap"
                android:src="@drawable/main_tab_trade"/>
        <TextView
                style="@style/MainTabText"
                android:text="@string/trade"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_assets"
            style="@style/MainTabLayout">
        <ImageView
                style="@style/WrapWrap"
                android:src="@drawable/main_tab_assets"/>
        <TextView
                style="@style/MainTabText"
                android:text="@string/assets"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_mine"
        style="@style/MainTabLayout">
        <ImageView
            style="@style/WrapWrap"
            android:src="@drawable/main_tab_mine"/>
        <TextView
            style="@style/MainTabText"
            android:text="@string/mine"/>
    </LinearLayout>
</LinearLayout>