<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!--

    android:background="@drawaic_k_line_type_pup_bgelow"
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/color_FFECEDF4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <CheckBox
                android:id="@+id/cb_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_time"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_1min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_1min"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_5min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_5min"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />


            <CheckBox
                android:id="@+id/cb_15min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_15min"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_30min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_30min"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/cb_1hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_1h"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_2hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_2h"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_4hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_4h"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_6hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_6h"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_12hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_12h"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/cb_1day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_1d"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_1week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/k_1w"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
