<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch.Vertical"
>
    <LinearLayout
        style="@style/MatchWrap.Horizontal"
    >
        <TextView
            android:id="@+id/tv_price_title"
            style="@style/WrapWrap.TextSecondary.12sp"
            android:text="@string/price2"
        />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        />

        <TextView
            android:id="@+id/tv_number_title"
            style="@style/WrapWrap.TextSecondary.12sp"
            android:text="@string/number2"
        />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_sell"
        style="@style/MatchMatch"
        android:layout_marginTop="6dp"
        android:layout_weight="1"/>

    <LinearLayout
        style="@style/MatchWrap.Horizontal.Center"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
    >
        <TextView
            android:id="@+id/tv_price"
            style="@style/WrapWrap"
            android:textColor="@color/color_decrease"
            android:textSize="16sp"
            tools:text="1.11111"
        />
        <ImageView
            android:id="@+id/iv_mqtt_signal"
            style="@style/WrapWrap"
            android:layout_marginLeft="10dp"
        />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_buy"
        style="@style/MatchMatch"
        android:layout_marginTop="7dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_deful_num"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/trade_show_pop_shape"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_xiaoshu"
                style="@style/WrapWrap.TextSecondary.12sp"
                android:text="@string/price_gang"
            />

            <ImageView
                android:id="@+id/iv_xiaoshu"
                style="@style/WrapWrap"
                android:padding="3dp"
                android:src="@mipmap/ic_down_sml"
            />
        </LinearLayout>
        <View android:layout_width="8dp"
              android:layout_height="1dp"/>
        <LinearLayout
            android:id="@+id/ll_deful_show"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/trade_show_pop_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_deful"
                style="@style/WrapWrap.TextSecondary.12sp"
                android:text="@string/defult"
            />

            <ImageView
                android:id="@+id/iv_deful"
                style="@style/WrapWrap"
                android:padding="3dp"
                android:src="@mipmap/ic_down_sml"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>