<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cs_parent"
    style="@style/MatchMatch"
    android:focusable="true"
    android:focusableInTouchMode="true"
>
    <RadioGroup
        android:id="@+id/rg_buy_sell"
        style="@style/MatchWrap.Horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_order_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
    >
        <RadioButton
            android:id="@+id/rb_buy"
            style="@style/CustomRadioBuy"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:text="买入"
            android:textSize="14sp"
        />
        <RadioButton
            android:id="@+id/rb_sell"
            style="@style/CustomRadioSell"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="卖出"
            android:textSize="14sp"
        />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/ll_order_type"
        style="@style/WrapWrap.Horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/et_trade_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_buy_sell">
        <TextView
            android:id="@+id/tv_select_order"
            style="@style/WrapWrap.TextSecondary.12sp"
            android:text="限价单"
        />
        <ImageView
            android:id="@+id/iv_select"
            style="@style/WrapWrap"
            android:padding="4dp"
            android:src="@mipmap/ic_down_sml"
        />
    </LinearLayout>

    <io.alf.exchange.widget.TradeEditText
        android:id="@+id/et_trade_price"
        style="@style/MatchWrap"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_guzhi_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_order_type"
        app:setHintText="@string/price1"
    />
    <TextView
        android:id="@+id/tv_guzhi_title"
        style="@style/WrapWrap.TextSecondary.12sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/et_trade_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_trade_price"
    />
    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_guzhi_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_guzhi_title"
        app:layout_constraintLeft_toRightOf="@+id/tv_guzhi_title"
        app:layout_constraintTop_toBottomOf="@+id/et_trade_price"
        app:layout_constraintTop_toTopOf="@+id/tv_guzhi_title"
    />
    <io.alf.exchange.widget.TradeEditText2
        android:id="@+id/et_trade_number"
        style="@style/MatchWrap"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        app:isMoney="false"
        app:layout_constraintBottom_toTopOf="@+id/rl_percent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guzhi_title"
    />
    <RelativeLayout
        android:id="@+id/rl_percent"
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@+id/et_trade_total_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_trade_number"
    >
        <!--your layout-->
        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/percent_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_indicator_color="#FF41BDA7"
            app:isb_progress="0"
            app:isb_seek_smoothly="true"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_show_tick_marks_type="oval"
            app:isb_show_tick_texts="true"
            app:isb_thumb_adjust_auto="false"
            app:isb_thumb_drawable="@drawable/percent_indicator_buy"
            app:isb_thumb_text_color="#FF41BDA7"
            app:isb_tick_marks_drawable="@drawable/selector_tick_marks_buy"
            app:isb_tick_marks_size="8dp"
            app:isb_tick_texts_array="@array/percent_array"
            app:isb_tick_texts_color="@color/selector_tick_texts_buy"
            app:isb_tick_texts_size="10sp"
            app:isb_ticks_count="5"
            app:isb_track_background_color="#FFF5F6FA"
            app:isb_track_progress_color="#FF41BDA7"/>
        <!--your layout-->
        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/percent_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_indicator_color="#FFDF677E"
            app:isb_progress="0"
            app:isb_seek_smoothly="true"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_show_tick_marks_type="oval"
            app:isb_show_tick_texts="true"
            app:isb_thumb_adjust_auto="false"
            app:isb_thumb_drawable="@drawable/percent_indicator_sell"
            app:isb_thumb_text_color="#FFDF677E"
            app:isb_tick_marks_drawable="@drawable/selector_tick_marks_sell"
            app:isb_tick_marks_size="8dp"
            app:isb_tick_texts_array="@array/percent_array"
            app:isb_tick_texts_color="@color/selector_tick_texts_sell"
            app:isb_tick_texts_size="10sp"
            app:isb_ticks_count="5"
            app:isb_track_background_color="#FFF5F6FA"
            app:isb_track_progress_color="#FFDF677E"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_available_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:text="@string/available_title"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_percent"
    />
    <TextView
        android:id="@+id/tv_available_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_available_title"
        app:layout_constraintLeft_toRightOf="@+id/tv_available_title"
        app:layout_constraintTop_toTopOf="@+id/tv_available_title"

    />
    <io.alf.exchange.widget.TradeEditText3
        android:id="@+id/et_trade_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        app:isShowAddSub="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_available_title"
        app:setHintText="@string/total_price"
    />
    <TextView
        android:id="@+id/btn_buy_sell"
        android:gravity="center"
        style="@style/WrapWrap.ColorWhite.14sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/trade_buy_sell_select"
        android:text="@string/buy"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_trade_total_price"
    />
</androidx.constraintlayout.widget.ConstraintLayout>